--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" author="Dana">
+    <meta charset="UTF-8">
+    <meta name="author" content="Dana">
     <title>This is my index.</title>
 </head>
 
